--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "typescript": "^5.9.2",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "yup": "^1.7.0"
+    "yup": "^1.7.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -64,12 +65,6 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/nodemailer": "^7.0.3",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
-    "eslint": "^9.35.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
-    "express-session=": "link:@types/express-session=",
-    "prettier": "^3.6.2"
+    "express-session=": "link:@types/express-session="
   }
 }
