初始化Category接口

--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/nodemailer": "^7.0.3",
-    "express-session=": "link:@types/express-session="
+    "@types/nodemailer": "^7.0.3"
   }
 }
