--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "ali-oss": "^6.23.0",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
-    "camelcase-keys": "^10.0.0",
     "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -34,7 +33,6 @@
     "helmet": "^8.1.0",
     "image-size": "^2.0.2",
     "ioredis": "^5.8.2",
-    "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "meilisearch": "^0.54.0",
     "morgan": "^1.10.1",
@@ -43,6 +41,7 @@
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "p-limit": "^7.2.0",
+    "p-map": "^7.0.4",
     "pinyin": "^4.0.0",
     "qs": "^6.14.0",
     "redis": "^5.9.0",
